update content about

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 </head>
 <body>
     <div class="header">
-        <nav class="navbar">
-            <img class="profile" src="AGG07651.JPG">
+        <div class="navbar">
+            <img src="AGG07651.JPG">
             <h2>Nicholas Yang</h2>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html">About</a></li>
+                <li><a href="index.html#home">Home</a></li>
+                <li><a href="index.html#about">About</a></li>
                 <li><a href="index.html">Portfolio</a></li>
                 <li><a href="index.html">Contact</a></li>
             </ul>
-        </nav>
+        </div>
     </div>
-    <div class="content-1">
+    <div class="content-1" id="home">
         <div class="icon-content1">
             <i class="bi bi-filetype-html"></i>
             <i class="bi bi-filetype-css"></i>
@@ -30,6 +30,22 @@
         <h2 id="text-1">Welcome To My </h2><h2 id="text-2">PortFolio Website</h2>
         <div class="website-adress">
             <h3>froxyzens.com</h3>
+        </div>
+    </div>
+    <div class="content-2" id="about">
+        <div class="information">
+            <h3>Hello it's Me</h3>
+            <h1>Nicholas Yang</h2>
+            <h2>Web Developer & Designer</h2>
+            <p> I am a 19 year old student studying at widya dharma pontianak, and I like web programming and the world of web3 or blockchain. I also like editing, and usually I edit comics especially clean and redraw comics. </p>
+            <div class= "info-icon">
+                <a href="https://github.com/FroxyZen/" target="_blank"><i class="bi bi-github"></i></a>
+                <a href="###"><i class="bi bi-linkedin"></i></a>
+                <a href="https://x.com/ZensFro" target="_blank"><i class="bi bi-twitter-x"></i></a>
+            </div>
+        </div>
+        <div class="Picture">
+            <img src="AGG07651.JPG">
         </div>
     </div>
 </body>
